--- a/app/globals.css
+++ b/app/globals.css
@@ -190,3 +190,19 @@
     @apply bg-background text-foreground;
   }
 }
+
+details>summary::-webkit-details-marker {
+  display: none;
+}
+
+details[open] summary {
+  margin-bottom: 0.5rem;
+}
+
+details:not([open]) summary:hover {
+  background-color: rgba(249, 250, 251, 1);
+}
+
+details[open] {
+  background-color: white;
+}
